--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,15 @@ url: "http://a-viva-veu.github.io"
 # Build Settings
 sass:
   sass_dir: _sass
-include: ['_pages']
+
+collections:
+  pages:
+    output: true
+    permalink: /:path/
+
+permalink: pretty
+
+include: ['_pages','_pages/concerts']
+
 kramdown:
   input: GFM
